config: upload 4.6 ci-operator and job configurations
Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -275,6 +275,12 @@ config_updater:
         - ci
         - ci-stg
       name: ci-operator-4.5-configs
+    ci-operator/config/**/*openshift-4.6*.yaml:
+      clusters:
+        default:
+        - ci
+        - ci-stg
+      name: ci-operator-4.6-configs
     ci-operator/config/**/*openshift-v4*.yaml:
       clusters:
         default:
@@ -329,6 +335,12 @@ config_updater:
         - ci
         - ci-stg
       name: ci-operator-4.5-configs
+    ci-operator/config/**/*release-4.6*.yaml:
+      clusters:
+        default:
+        - ci
+        - ci-stg
+      name: ci-operator-4.6-configs
     ci-operator/config/**/*release-next*.yaml:
       clusters:
         default:
@@ -437,6 +449,12 @@ config_updater:
         - ""
       gzip: true
       name: job-config-4.5
+    ci-operator/jobs/**/*openshift-4.6*.yaml:
+      clusters:
+        default:
+        - ""
+      gzip: true
+      name: job-config-4.6
     ci-operator/jobs/**/*openshift-v4*.yaml:
       clusters:
         default:
@@ -491,6 +509,12 @@ config_updater:
         - ""
       gzip: true
       name: job-config-4.5
+    ci-operator/jobs/**/*release-4.6*.yaml:
+      clusters:
+        default:
+        - ""
+      gzip: true
+      name: job-config-4.6
     ci-operator/jobs/**/*release-next*.yaml:
       clusters:
         default:
