Define our own prow tide for tekton instead of using openshift
Signed-off-by: Chmouel Boudjnah <chmouel@redhat.com>

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -890,11 +890,6 @@ tide:
     - openshift/service-catalog
     - openshift/service-ca-operator
     - openshift/splunk-forwarder-operator
-    - openshift/tektoncd-pipeline
-    - openshift/tektoncd-cli
-    - openshift/tektoncd-pipeline-operator
-    - openshift/tektoncd-catalog
-    - openshift/tektoncd-triggers
     - openshift/telemeter
     - openshift/template-service-broker
     - openshift/template-service-broker-operator
@@ -1115,6 +1110,22 @@ tide:
     repos:
     - redhat-operator-ecosystem/playground
     - redhat-operator-ecosystem/release
+  - labels:
+    - lgtm
+    - approved
+    missingLabels:
+    - needs-rebase
+    - do-not-merge/blocked-paths
+    - do-not-merge/hold
+    - do-not-merge/work-in-progress
+    - do-not-merge/invalid-owners-file
+    - bugzilla/invalid-bug
+    repos:
+    - openshift/tektoncd-pipeline
+    - openshift/tektoncd-cli
+    - openshift/tektoncd-pipeline-operator
+    - openshift/tektoncd-catalog
+    - openshift/tektoncd-triggers
   rebase_label: tide/merge-method-rebase
   squash_label: tide/merge-method-squash
   status_update_period: 1m0s
