oVirt e2e: Update installer image on temolate
Now that ovirt is a part of the official installer
we can use the regulr image

Signed-off-by: Gal Zaidman <gzaidman@redhat.com>

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
@@ -291,7 +291,7 @@ objects:
     - name: setup
       # A midstep till we have the installer work merged, then we
       # can use the CI artifact
-      image: quay.io/rgolangh/openshift-installer:latest
+      image: ${IMAGE_INSTALLER}
       terminationMessagePolicy: FallbackToLogsOnError
       volumeMounts:
       - name: shared-tmp
@@ -430,7 +430,7 @@ objects:
     - name: teardown
       # A midstep till we have the installer work merged, then we
       # can use the CI artifact
-      image: quay.io/rgolangh/openshift-installer:latest
+      image: ${IMAGE_INSTALLER}
       terminationMessagePolicy: FallbackToLogsOnError
       volumeMounts:
       - name: shared-tmp
