specify the minute

--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -1,6 +1,6 @@
 periodics:
 - agent: kubernetes
-  cron: '* */12 * * *'
+  cron: '0 */12 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
@@ -49,7 +49,7 @@ periodics:
       secret:
         secretName: osde2e-common
 - agent: kubernetes
-  cron: '* */12 * * *'
+  cron: '0 */12 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
@@ -100,7 +100,7 @@ periodics:
       secret:
         secretName: osde2e-credentials
 - agent: kubernetes
-  cron: '* */4 * * *'
+  cron: '0 */4 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
@@ -144,7 +144,7 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* */4 * * *'
+  cron: '0 */4 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
@@ -190,7 +190,7 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* */4 * * *'
+  cron: '0 */4 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
@@ -236,7 +236,7 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* */4 * * *'
+  cron: '0 */4 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
@@ -280,7 +280,7 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* */4 * * *'
+  cron: '0 */4 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
@@ -368,7 +368,7 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* */4 * * *'
+  cron: '0 */4 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
@@ -408,7 +408,7 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* */4 * * *'
+  cron: '0 */4 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
@@ -454,7 +454,7 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* */4 * * *'
+  cron: '0 */4 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
@@ -542,7 +542,7 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* */4 * * *'
+  cron: '0 */4 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
@@ -586,7 +586,7 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* */4 * * *'
+  cron: '0 */4 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
@@ -632,7 +632,7 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* */4 * * *'
+  cron: '0 */4 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
@@ -678,7 +678,7 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* */4 * * *'
+  cron: '0 */4 * * *'
   decorate: true
   extra_refs:
   - base_ref: master
