Keepalive the ssh connection to dev-scripts
dev-scripts can go a long time without outputing
anything, add a keepalive to prevent ssh timeing out

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
@@ -1041,7 +1041,7 @@ objects:
         mkdir -p $HOME
         bash /tmp/shared/mock-nss.sh
 
-        SSHOPTS="-o ConnectTimeout=5 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i /tmp/cluster/ssh-privatekey"
+        SSHOPTS="-o ConnectTimeout=5 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ServerAliveInterval=90 -i /tmp/cluster/ssh-privatekey"
         export IP=$(cat /tmp/shared/packet-server-ip)
 
         for x in $(seq 10) ; do
