--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -649,6 +649,7 @@ tide:
     - openshift-kni/performance-addon-operators
     - openshift-kni/cnf-features-deploy
     - openshift/openshift-tests
+    - openshift/csi-driver-nfs
   - includedBranches:
     - release-4.0
     - release-4.1
@@ -912,6 +913,7 @@ tide:
     - openshift-kni/cnf-features-deploy
     - openshift-priv/ci-experiment-origin
     - openshift/openshift-tests
+    - openshift/csi-driver-nfs
   - labels:
     - lgtm
     - approved
