--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -109,6 +109,9 @@ approve:
 - repos:
   - openshift/openshift-tests
   require_self_approval: false
+- repos:
+  - openshift/csi-driver-nfs
+  require_self_approval: false
 blunderbuss:
   max_request_count: 2
   request_count: 2
@@ -1272,6 +1275,9 @@ lgtm:
 - repos:
   - openshift/openshift-tests
   review_acts_as_lgtm: true
+- repos:
+  - openshift/csi-driver-nfs
+  review_acts_as_lgtm: true
 override:
   allow_top_level_owners: true
 owners:
@@ -2025,6 +2031,8 @@ plugins:
   openshift/crd-schema-gen:
   - approve
   openshift/csi-cluster-driver-registrar:
+  - approve
+  openshift/csi-driver-nfs:
   - approve
   openshift/csi-driver-registrar:
   - approve
