tide: move repos into non-BZ flow
Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -710,9 +710,6 @@ tide:
     - openshift/baremetal-operator
     - openshift/baremetal-runtimecfg
     - openshift/builder
-    - openshift/ci-chat-bot
-    - openshift/cincinnati
-    - openshift/cincinnati-graph-data
     - openshift/client-go
     - openshift/cloud-credential-operator
     - openshift/cloud-provider-openstack
@@ -906,14 +903,9 @@ tide:
     - do-not-merge/invalid-owners-file
     - bugzilla/invalid-bug
     repos:
-    - openshift/docker-distribution
-    - openshift/enhancements
     - openshift/enterprise-images
-    - openshift/hive
-    - openshift/hypershift-toolkit
     - openshift/online-registration
     - openshift/ose
-    - openshift/source-to-image
   - excludedBranches:
     - release-4.0
     - release-4.1
@@ -1109,13 +1101,17 @@ tide:
     - openshift/tektoncd-pipeline-operator
     - openshift/tektoncd-catalog
     - openshift/tektoncd-triggers
+    - openshift/ci-chat-bot
     - openshift/ci-ns-ttl-controller
     - openshift/ci-search
     - openshift/ci-secret-mirroring-controller
     - openshift/ci-tools
     - openshift/ci-vm-operator
+    - openshift/cincinnati
+    - openshift/cincinnati-graph-data
     - openshift/release
     - openshift/release-controller
+    - openshift/config
   - labels:
     - lgtm
     - approved
@@ -1141,6 +1137,11 @@ tide:
     - openshift/pagerduty-operator
     - openshift/rbac-permissions-operator
     - openshift/splunk-forwarder-operator
+    - openshift/hive
+    - openshift/docker-distribution
+    - openshift/enhancements
+    - openshift/hypershift-toolkit
+    - openshift/source-to-image
   rebase_label: tide/merge-method-rebase
   squash_label: tide/merge-method-squash
   status_update_period: 1m0s
