--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -9,6 +9,10 @@ approve:
 - ignore_review_state: false
   lgtm_acts_as_approve: true
   repos:
+  - redhat-operator-ecosystem/release
+- ignore_review_state: false
+  lgtm_acts_as_approve: true
+  repos:
   - openshift/enterprise-images
   require_self_approval: false
 - ignore_review_state: true
@@ -1284,6 +1288,10 @@ lgtm:
   - openshift/ci-tools
   - openshift/ci-ns-ttl-controller
   - openshift/ci-secret-mirroring-controller
+  review_acts_as_lgtm: true
+  trusted_team_for_sticky_lgtm: openshift-team-developer-productivity-test-platform
+- repos:
+  - redhat-operator-ecosystem/release
   review_acts_as_lgtm: true
   trusted_team_for_sticky_lgtm: openshift-team-developer-productivity-test-platform
 - repos:
