Cleanup and standardize tide configuration for SREP repos

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -164,6 +164,14 @@ branch-protection:
           required_status_checks:
             contexts:
             - ci.ext.devshift.net PR build
+        rbac-permissions-operator:
+          required_status_checks:
+            contexts:
+            - ci.ext.devshift.net PR build
+        splunk-forwarder-operator:
+          required_status_checks:
+            contexts:
+            - ci.ext.devshift.net PR build
         tektoncd-catalog:
           branches:
             release-next:
@@ -497,11 +505,9 @@ tide:
     - openshift/ansible-service-broker
     - openshift/api
     - openshift/apiserver-library-go
-    - openshift/aws-account-operator
     - openshift/baremetal-operator
     - openshift/baremetal-runtimecfg
     - openshift/builder
-    - openshift/certman-operator
     - openshift/client-go
     - openshift/cloud-credential-operator
     - openshift/cloud-provider-openstack
@@ -546,7 +552,6 @@ tide:
     - openshift/cluster-version-operator
     - openshift/compliance-operator
     - openshift/configmap-reload
-    - openshift/configure-alertmanager-operator
     - openshift/console
     - openshift/console-operator
     - openshift/coredns-mdns
@@ -560,8 +565,6 @@ tide:
     - openshift/csi-node-driver-registrar
     - openshift/csi-operator
     - openshift/custom-resource-status
-    - openshift/deadmanssnitch-operator
-    - openshift/dedicated-admin-operator
     - openshift/elasticsearch-operator
     - openshift/elasticsearch-proxy
     - openshift/etcd
@@ -594,8 +597,6 @@ tide:
     - openshift/sig-storage-local-static-provisioner
     - openshift/machine-api-operator
     - openshift/machine-config-operator
-    - openshift/managed-cluster-config
-    - openshift/managed-velero-operator
     - openshift/mdns-publisher
     - openshift/multus-cni
     - openshift/must-gather
@@ -616,19 +617,16 @@ tide:
     - openshift/origin-aggregated-logging
     - openshift/ovirt-csi-driver
     - openshift/ovn-kubernetes
-    - openshift/pagerduty-operator
     - openshift/prometheus
     - openshift/prometheus-alertmanager
     - openshift/prometheus-operator
     - openshift/prom-label-proxy
-    - openshift/rbac-permissions-operator
     - openshift/route-override-cni
     - openshift/router
     - openshift/runtime-utils
     - openshift/sdn
     - openshift/service-catalog
     - openshift/service-ca-operator
-    - openshift/splunk-forwarder-operator
     - openshift/telemeter
     - openshift/template-service-broker
     - openshift/template-service-broker-operator
@@ -707,12 +705,10 @@ tide:
     - openshift/api
     - openshift/apiserver-library-go
     - openshift/autoheal
-    - openshift/aws-account-operator
     - openshift/azure-misc
     - openshift/baremetal-operator
     - openshift/baremetal-runtimecfg
     - openshift/builder
-    - openshift/certman-operator
     - openshift/ci-chat-bot
     - openshift/cincinnati
     - openshift/cincinnati-graph-data
@@ -763,7 +759,6 @@ tide:
     - openshift/compliance-operator
     - openshift/config
     - openshift/configmap-reload
-    - openshift/configure-alertmanager-operator
     - openshift/console
     - openshift/console-operator
     - openshift/containernetworking-plugins
@@ -779,8 +774,6 @@ tide:
     - openshift/csi-node-driver-registrar
     - openshift/csi-operator
     - openshift/custom-resource-status
-    - openshift/deadmanssnitch-operator
-    - openshift/dedicated-admin-operator
     - openshift/elasticsearch-operator
     - openshift/elasticsearch-proxy
     - openshift/etcd
@@ -830,8 +823,6 @@ tide:
     - openshift/sig-storage-local-static-provisioner
     - openshift/machine-api-operator
     - openshift/machine-config-operator
-    - openshift/managed-cluster-config
-    - openshift/managed-velero-operator
     - openshift/mdns-publisher
     - openshift/monitor-project-lifecycle
     - openshift/multus-admission-controller
@@ -861,7 +852,6 @@ tide:
     - openshift/osde2e
     - openshift/ovirt-csi-driver
     - openshift/ovn-kubernetes
-    - openshift/pagerduty-operator
     - openshift/pipelines-catalog
     - openshift/pipelines-tutorial
     - openshift/pod-checkpointer-operator
@@ -871,7 +861,6 @@ tide:
     - openshift/prometheus-client_golang
     - openshift/prometheus-operator
     - openshift/prom-label-proxy
-    - openshift/rbac-permissions-operator
     - openshift/rhcos-tools
     - openshift/route-override-cni
     - openshift/router
@@ -880,7 +869,6 @@ tide:
     - openshift/sdn
     - openshift/service-catalog
     - openshift/service-ca-operator
-    - openshift/splunk-forwarder-operator
     - openshift/telemeter
     - openshift/template-service-broker
     - openshift/template-service-broker-operator
@@ -1126,6 +1114,31 @@ tide:
     - openshift/ci-vm-operator
     - openshift/release
     - openshift/release-controller
+  - labels:
+    - lgtm
+    - approved
+    missingLabels:
+    - needs-rebase
+    - do-not-merge/blocked-paths
+    - do-not-merge/hold
+    - do-not-merge/work-in-progress
+    - do-not-merge/invalid-owners-file
+    - bugzilla/invalid-bug
+    repos:
+    - openshift/aws-account-operator
+    - openshift/certman-operator
+    - openshift/configure-alertmanager-operator
+    - openshift/deadmanssnitch-operator
+    - openshift/dedicated-admin-operator
+    - openshift/managed-cluster-config
+    - openshift/managed-prometheus-exporter-dns
+    - openshift/managed-prometheus-exporter-ebs-iops-reporter
+    - openshift/managed-prometheus-exporter-machine-api
+    - openshift/managed-prometheus-exporter-stuck-ebs-vols
+    - openshift/managed-velero-operator
+    - openshift/pagerduty-operator
+    - openshift/rbac-permissions-operator
+    - openshift/splunk-forwarder-operator
   rebase_label: tide/merge-method-rebase
   squash_label: tide/merge-method-squash
   status_update_period: 1m0s
