--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -2220,6 +2220,14 @@ plugins:
   - approve
   openshift/managed-cluster-config:
   - approve
+  openshift/managed-prometheus-exporter-dns:
+  - approve
+  openshift/managed-prometheus-exporter-ebs-iops-reporter:
+  - approve
+  openshift/managed-prometheus-exporter-machine-api:
+  - approve
+  openshift/managed-prometheus-exporter-stuck-ebs-vols:
+  - approve
   openshift/managed-velero-operator:
   - approve
   openshift/mdns-publisher:
