temporarily disable endurance e2e jobs

--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
@@ -84,7 +84,7 @@ periodics:
       secret:
         secretName: ci-pull-credentials
 - agent: kubernetes
-  cron: 0 12 * * 1-5
+  cron: '@yearly'
   decorate: true
   labels:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
