tide: don't require bugzillas on feature-es6x branches
Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -690,6 +690,7 @@ tide:
     - release-4.4
     - release-4.5
     - openshift-4.1
+    - feature-es6x
     labels:
     - lgtm
     - approved
@@ -892,6 +893,22 @@ tide:
     - openshift-priv/ci-experiment-origin
     - openshift/openshift-tests
     - openshift/csi-driver-nfs
+  - includedBranches:
+    - feature-es6x
+    labels:
+    - lgtm
+    - approved
+    missingLabels:
+    - needs-rebase
+    - do-not-merge/blocked-paths
+    - do-not-merge/hold
+    - do-not-merge/work-in-progress
+    - do-not-merge/invalid-owners-file
+    - bugzilla/invalid-bug
+    repos:
+    - openshift/cluster-logging-operator
+    - openshift/elasticsearch-operator
+    - openshift/origin-aggregated-logging
   - labels:
     - lgtm
     - approved
