jobs: call out jobs that need manual branching
Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/ci-operator/jobs/openshift/cluster-api-provider-libvirt/openshift-cluster-api-provider-libvirt-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-api-provider-libvirt/openshift-cluster-api-provider-libvirt-master-presubmits.yaml
@@ -353,6 +353,8 @@ presubmits:
     always_run: true
     context: ci/prow/yaml-lint
     decorate: true
+    labels:
+      ci.openshift.io/manually-branched: "true"
     name: pull-ci-openshift-cluster-api-provider-libvirt-master-yaml-lint
     rerun_command: /test yaml-lint
     spec:
