--- a/ci-operator/jobs/openshift/cluster-monitoring-operator/openshift-cluster-monitoring-operator-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-monitoring-operator/openshift-cluster-monitoring-operator-master-presubmits.yaml
@@ -6,6 +6,8 @@ presubmits:
     - master
     context: ci/prow/generate
     decorate: true
+    labels:
+      ci.openshift.io/manually-branched: "true"
     name: pull-ci-openshift-cluster-monitoring-operator-master-generate
     rerun_command: /test generate
     spec:
@@ -281,6 +283,8 @@ presubmits:
     - master
     context: ci/prow/shellcheck
     decorate: true
+    labels:
+      ci.openshift.io/manually-branched: "true"
     name: pull-ci-openshift-cluster-monitoring-operator-master-shellcheck
     rerun_command: /test shellcheck
     spec:
