--- a/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
@@ -1941,6 +1941,8 @@ presubmits:
     always_run: true
     context: ci/prow/shellcheck
     decorate: true
+    labels:
+      ci.openshift.io/manually-branched: "true"
     name: pull-ci-openshift-installer-master-shellcheck
     rerun_command: /test shellcheck
     spec:
@@ -1963,6 +1965,8 @@ presubmits:
     always_run: true
     context: ci/prow/tf-fmt
     decorate: true
+    labels:
+      ci.openshift.io/manually-branched: "true"
     name: pull-ci-openshift-installer-master-tf-fmt
     optional: true
     rerun_command: /test tf-fmt
@@ -1986,6 +1990,8 @@ presubmits:
     always_run: true
     context: ci/prow/tf-lint
     decorate: true
+    labels:
+      ci.openshift.io/manually-branched: "true"
     name: pull-ci-openshift-installer-master-tf-lint
     rerun_command: /test tf-lint
     spec:
@@ -2008,6 +2014,8 @@ presubmits:
     always_run: true
     context: ci/prow/yaml-lint
     decorate: true
+    labels:
+      ci.openshift.io/manually-branched: "true"
     name: pull-ci-openshift-installer-master-yaml-lint
     rerun_command: /test yaml-lint
     spec:
