--- a/ci-operator/jobs/openshift/cluster-api-provider-aws/openshift-cluster-api-provider-aws-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-api-provider-aws/openshift-cluster-api-provider-aws-master-presubmits.yaml
@@ -452,6 +452,8 @@ presubmits:
     always_run: true
     context: ci/prow/yaml-lint
     decorate: true
+    labels:
+      ci.openshift.io/manually-branched: "true"
     name: pull-ci-openshift-cluster-api-provider-aws-master-yaml-lint
     rerun_command: /test yaml-lint
     spec:
