--- a/ci-operator/jobs/openshift/machine-api-operator/openshift-machine-api-operator-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/machine-api-operator/openshift-machine-api-operator-master-presubmits.yaml
@@ -886,6 +886,8 @@ presubmits:
     always_run: true
     context: ci/prow/yaml-lint
     decorate: true
+    labels:
+      ci.openshift.io/manually-branched: "true"
     name: pull-ci-openshift-machine-api-operator-master-yaml-lint
     rerun_command: /test yaml-lint
     spec:
