--- a/ci-operator/jobs/openshift/telemeter/openshift-telemeter-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/telemeter/openshift-telemeter-master-presubmits.yaml
@@ -203,6 +203,8 @@ presubmits:
     - master
     context: ci/prow/generate
     decorate: true
+    labels:
+      ci.openshift.io/manually-branched: "true"
     name: pull-ci-openshift-telemeter-master-master-generate
     rerun_command: /test generate
     spec:
