Add carotation optional e2e test

--- a/ci-operator/jobs/openshift/openshift-azure/openshift-openshift-azure-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-azure/openshift-openshift-azure-master-presubmits.yaml
@@ -72,6 +72,26 @@ presubmits:
     always_run: false
     branches:
     - master
+    context: e2e-carotation
+    decorate: true
+    name: pull-ci-azure-master-e2e-carotation
+    rerun_command: /test e2e-carotation
+    spec:
+      containers:
+      - args:
+        - hack/tests/e2e-create.sh
+        env:
+        - name: FOCUS
+          value: \[CaRotation\]
+        image: registry.svc.ci.openshift.org/azure/ci-base:latest
+        name: ""
+        resources: {}
+      serviceAccountName: ci-operator
+    trigger: (?m)^/test( | .* )e2e-carotation,?($|\s.*)
+  - agent: kubernetes
+    always_run: false
+    branches:
+    - master
     context: e2e-changeloglevel
     decorate: true
     name: pull-ci-azure-master-e2e-changeloglevel
