jobs: specify branches for manual jobs
Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-master-presubmits.yaml
@@ -1843,6 +1843,8 @@ presubmits:
     trigger: (?m)^/test( | .* )images,?($|\s.*)
   - agent: kubernetes
     always_run: true
+    branches:
+    - master
     context: ci/prow/shellcheck
     decorate: true
     labels:
@@ -1867,6 +1869,8 @@ presubmits:
     trigger: (?m)^/test shellcheck
   - agent: kubernetes
     always_run: true
+    branches:
+    - master
     context: ci/prow/tf-fmt
     decorate: true
     labels:
@@ -1892,6 +1896,8 @@ presubmits:
     trigger: (?m)^/test( | .* )tf-fmt,?($|\s.*)
   - agent: kubernetes
     always_run: true
+    branches:
+    - master
     context: ci/prow/tf-lint
     decorate: true
     labels:
@@ -2012,6 +2018,8 @@ presubmits:
     trigger: (?m)^/test( | .* )verify-vendor,?($|\s.*)
   - agent: kubernetes
     always_run: true
+    branches:
+    - master
     context: ci/prow/yaml-lint
     decorate: true
     labels:
