--- a/ci-operator/jobs/openshift/cluster-api-provider-aws/openshift-cluster-api-provider-aws-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-api-provider-aws/openshift-cluster-api-provider-aws-master-presubmits.yaml
@@ -450,6 +450,8 @@ presubmits:
     trigger: (?m)^/test( | .* )unit,?($|\s.*)
   - agent: kubernetes
     always_run: true
+    branches:
+    - master
     context: ci/prow/yaml-lint
     decorate: true
     labels:
