--- a/ci-operator/jobs/openshift/cluster-monitoring-operator/openshift-cluster-monitoring-operator-release-4.3-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-monitoring-operator/openshift-cluster-monitoring-operator-release-4.3-presubmits.yaml
@@ -203,6 +203,8 @@ presubmits:
     - release-4.3
     context: ci/prow/generate
     decorate: true
+    labels:
+      ci.openshift.io/manually-branched: "true"
     name: pull-ci-openshift-cluster-monitoring-operator-release-4.3-generate
     rerun_command: /test generate
     spec:
@@ -275,6 +277,32 @@ presubmits:
         secret:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )images,?($|\s.*)
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - release-4.3
+    context: ci/prow/shellcheck
+    decorate: true
+    labels:
+      ci.openshift.io/manually-branched: "true"
+    name: pull-ci-openshift-cluster-monitoring-operator-release-4.3-shellcheck
+    rerun_command: /test shellcheck
+    spec:
+      containers:
+      - args:
+        - ./hack/shellcheck.sh
+        command:
+        - sh
+        env:
+        - name: IS_CONTAINER
+          value: "TRUE"
+        image: koalaman/shellcheck-alpine:stable
+        imagePullPolicy: Always
+        name: ""
+        resources:
+          requests:
+            cpu: 500m
+    trigger: (?m)^/test shellcheck
   - agent: kubernetes
     always_run: true
     branches:
