--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -449,6 +449,7 @@ tide:
     - release-4.4
     - release-4.3
     - release-4.5
+    - release-4.6
     labels:
     - lgtm
     - approved
@@ -469,6 +470,7 @@ tide:
     - release-4.3
     - release-4.4
     - release-4.5
+    - release-4.6
     labels:
     - lgtm
     - approved
@@ -488,6 +490,7 @@ tide:
     - release-4.3
     - release-4.4
     - release-4.5
+    - release-4.6
     - openshift-4.1
     labels:
     - lgtm
@@ -654,6 +657,7 @@ tide:
     - release-4.3
     - release-4.4
     - release-4.5
+    - release-4.6
     - openshift-4.1
     labels:
     - lgtm
@@ -688,6 +692,7 @@ tide:
     - release-4.3
     - release-4.4
     - release-4.5
+    - release-4.6
     - openshift-4.1
     - feature-es6x
     labels:
@@ -928,6 +933,7 @@ tide:
     - release-4.3
     - release-4.4
     - release-4.5
+    - release-4.6
     - openshift-4.1
     labels:
     - lgtm
