Create the csi-driver-nfs repository
This clones the https://github.com/kubernetes-csi/csi-driver-nfs
repository into the openshift organisation.

This CSI driver will be necessary for adding the OpenStack Manila
(RWX) backend support.

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -647,6 +647,7 @@ tide:
     - openshift-kni/performance-addon-operators
     - openshift-kni/cnf-features-deploy
     - openshift/openshift-tests
+    - openshift/csi-driver-nfs
   - includedBranches:
     - release-4.0
     - release-4.1
@@ -891,6 +892,7 @@ tide:
     - openshift-kni/cnf-features-deploy
     - openshift-priv/ci-experiment-origin
     - openshift/openshift-tests
+    - openshift/csi-driver-nfs
   - includedBranches:
     - feature-es6x
     labels:
