--- a/cluster/ci/config/roles.yaml
+++ b/cluster/ci/config/roles.yaml
@@ -653,6 +653,13 @@ items:
   users:
   - ankitathomas
   - bradmwilliams
+- kind: Group
+  apiVersion: v1
+  metadata:
+    name: cpaas-optional-operator-ci
+  users:
+  - dirgim
+  - arilivigni
 - kind: RoleBinding
   apiVersion: rbac.authorization.k8s.io/v1
   metadata:
@@ -665,6 +672,35 @@ items:
   - kind: Group
     apiGroup: rbac.authorization.k8s.io
     name: prowjob-readers
+  - kind: Group
+    apiGroup: rbac.authorization.k8s.io
+    name: cpaas-optional-operator-ci
+
+- kind: Role
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: prowjob-create
+    namespace: ci
+  rules:
+  - apiGroups:
+    - prow.k8s.io
+    resources:
+    - prowjobs
+    verbs:
+    - create
+- kind: RoleBinding
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: prowjob-creators
+    namespace: ci
+  roleRef:
+    apiGroup: rbac.authorization.k8s.io
+    kind: Role
+    name: prowjob-create
+  subjects:
+  - kind: Group
+    apiGroup: rbac.authorization.k8s.io
+    name: cpaas-optional-operator-ci
 
 - kind: Namespace
   apiVersion: v1
