add imageset test jobs

--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -326,7 +326,7 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* 8 * * *'
+  cron: 0 8 * * *
   decorate: true
   extra_refs:
   - base_ref: master
@@ -500,7 +500,91 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* 8 * * *'
+  cron: 0 12 * * *
+  decorate: true
+  extra_refs:
+  - base_ref: master
+    org: openshift
+    repo: osde2e
+  labels:
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-osde2e-master-e2e-prod-middle-imageset
+  spec:
+    containers:
+    - args:
+      - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets middle-imageset;
+      command:
+      - /bin/bash
+      - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: prod
+      image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /usr/local/osde2e-secrets
+        name: osde2e-secrets
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: osde2e-secrets
+      secret:
+        secretName: osde2e-secrets
+- agent: kubernetes
+  cron: 0 12 * * *
+  decorate: true
+  extra_refs:
+  - base_ref: master
+    org: openshift
+    repo: osde2e
+  labels:
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-osde2e-master-e2e-prod-oldest-imageset
+  spec:
+    containers:
+    - args:
+      - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets oldest-imageset;
+      command:
+      - /bin/bash
+      - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: prod
+      image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /usr/local/osde2e-secrets
+        name: osde2e-secrets
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: osde2e-secrets
+      secret:
+        secretName: osde2e-secrets
+- agent: kubernetes
+  cron: 0 8 * * *
   decorate: true
   extra_refs:
   - base_ref: master
@@ -723,7 +807,91 @@ periodics:
       secret:
         secretName: osde2e-secrets
 - agent: kubernetes
-  cron: '* 8 * * *'
+  cron: 0 12 * * *
+  decorate: true
+  extra_refs:
+  - base_ref: master
+    org: openshift
+    repo: osde2e
+  labels:
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-osde2e-master-e2e-stage-middle-imageset
+  spec:
+    containers:
+    - args:
+      - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets middle-imageset;
+      command:
+      - /bin/bash
+      - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: stage
+      image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /usr/local/osde2e-secrets
+        name: osde2e-secrets
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: osde2e-secrets
+      secret:
+        secretName: osde2e-secrets
+- agent: kubernetes
+  cron: 0 12 * * *
+  decorate: true
+  extra_refs:
+  - base_ref: master
+    org: openshift
+    repo: osde2e
+  labels:
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-osde2e-master-e2e-stage-oldest-imageset
+  spec:
+    containers:
+    - args:
+      - set -o pipefail; export HOME=$(mktemp -d); export REPORT_DIR=${ARTIFACTS};
+        ./ci/prow_run_tests.sh /usr/local/osde2e-secrets oldest-imageset;
+      command:
+      - /bin/bash
+      - -c
+      env:
+      - name: DESTROY_CLUSTER
+        value: "false"
+      - name: MAJOR_TARGET
+        value: "4"
+      - name: MINOR_TARGET
+        value: "2"
+      - name: OSD_ENV
+        value: stage
+      image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /usr/local/osde2e-secrets
+        name: osde2e-secrets
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: osde2e-secrets
+      secret:
+        secretName: osde2e-secrets
+- agent: kubernetes
+  cron: 0 8 * * *
   decorate: true
   extra_refs:
   - base_ref: master
