--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -1165,6 +1165,18 @@ tide:
     - openshift/enhancements
     - openshift/hypershift-toolkit
     - openshift/source-to-image
+  - labels:
+    - lgtm
+    - approved
+    missingLabels:
+    - needs-rebase
+    - do-not-merge/blocked-paths
+    - do-not-merge/hold
+    - do-not-merge/work-in-progress
+    - do-not-merge/invalid-owners-file
+    repos:
+    - openshift/odo
+    - openshift/odo-init-image
   rebase_label: tide/merge-method-rebase
   squash_label: tide/merge-method-squash
   status_update_period: 1m0s
