Only sync openshift/* to openshift-priv
The workflow for creating and maintaining non-openshift repos in
openshift-priv is not fully designed yet, let's preempt possible
problems with conflicting names and prevent warnings about destination
repos for non-openshift source not existing.

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -941,6 +941,7 @@ periodics:
           - --config-path=./ci-operator/config/
           - --target-org=openshift-priv
           - --token-path=/etc/github/oauth
+          - --only-org=openshift
           - --confirm
         command:
           - private-org-sync
